# KalmanFilter

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  build.sh  compile.sh  test.sh  vcpkg.json
examples/: CMakeLists.txt  example_usage.cpp
include/kalman_filter/: kalman_filter.hpp  kalman_step.hpp  kf.h
src/: CMakeLists.txt  example.cpp  kalman_filter.cpp  kalman_python.py  kalman_step.cpp  kf.cpp  kf.h  kf1D.cpp  main.cpp  py-cpp-comparison.ipynb
tests/: CMakeLists.txt  test_example.cpp  test_kalman_filter.cpp  test_kalman_step.cpp
